k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: localdelivery-backend
  namespace: localdelivery

spec:
  replicas: 1

  selector:
    matchLabels:
      app: localdelivery-backend

  template:
    metadata:
      labels:
        app: localdelivery-backend

    spec:
      containers:
        - name: backend
          image: mdsarfraaznasir/localdelivery-backend:latest

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
