k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: localdelivery-backend
  namespace: localdelivery

spec:
  selector:
    app: localdelivery-backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

  type: ClusterIP
