k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localdelivery-ingress
  namespace: localdelivery
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: localdelivery-backend
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: localdelivery-frontend
                port:
                  number: 80
